[package]
authors = ["Timothy Perrett <hello@timperrett.com>"]
description = "A client library for the buildkite.com API"
documentation = "https://docs.rs/artisan"
edition = "2018"
exclude = [
    ".github/**",
    ".travis.yml"
]
keywords = [
    "buildkite",
    "client"
]
license = "Apache-2.0"
homepage = "https://github.com/timperrett/artisan"
name = "artisan"
readme = "README.md"
repository = "https://github.com/timperrett/artisan"
version = "0.1.0"

[dependencies]
serde_json = "1.0.39"

[badges.travis-ci]
repository = "timperrett/artisan"
